implement cards to appear when calorie collection is populated

--- a/calories.html
+++ b/calories.html
@@ -32,9 +32,11 @@
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
-<main>
-    
-</main>
+    <main>
+        <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-4 md:max-w-[75%]"
+            id="food-card-container">
+        </div>
+    </main>
 
     <!-- Bottom Navigation Bar -->
     <nav id="footerPlaceholder"></nav>
