remove console log after debugging

--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -45,11 +45,13 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <!-- the body of your page goes here -->
-    <!-- stuff -->
-    <div class="chart-container">
-        <canvas id="dailyCalorieBurntChart"></canvas>
-    </div>
+    <main>
+        <!-- the body of your page goes here -->
+        <!-- stuff -->
+        <div class="chart-container">
+            <canvas id="dailyCalorieBurntChart"></canvas>
+        </div>
+    </main>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
