--- a/navbars/home_nav_bottom.html
+++ b/navbars/home_nav_bottom.html
@@ -6,7 +6,7 @@
   class="hidden fixed top-[30%] left-[10%] right-[10%] md:top-1/2 md:left-1/2 md:transform md:-translate-x-1/2 md:-translate-y-1/2  bg-white rounded shadow-lg p-4 z-50 max-w-fit">
   <!-- Your list -->
   <ul class="menu flex flex-col bg-white max-w-fit rounded-box">
-    <li class="items-center">
+    <!-- <li class="items-center">
       <a>
         <div class="inline-block">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus inline-block" width="40"
@@ -19,9 +19,9 @@
         </div>
         <div class="inline-flex">Add New Recipe into Library</div>
       </a>
-    </li>
+    </li> -->
     <li class="flex-row">
-      <a>
+      <a href="addCalories.html">
         <div class="inline-block">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus inline-block" width="40"
             height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none" stroke-linecap="round"
@@ -31,11 +31,11 @@
             <path d="M5 12l14 0" />
           </svg>
         </div>
-        <div class="inline-flex max-w-40">Add New Recipe Category to Library</div>
+        <div class="inline-flex max-w-40">Record Your Meal</div>
       </a>
     </li>
     <li class="flex-row">
-      <a href="../add_exercise.html">
+      <a href="add_exercise.html">
         <div class="inline-block">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus inline-block" width="40"
             height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none" stroke-linecap="round"
