--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -46,10 +46,32 @@
     <nav id="navbarPlaceholder"></nav>
 
     <main>
-        <!-- the body of your page goes here -->
-        <!-- stuff -->
         <div class="chart-container">
             <canvas id="dailyCalorieBurntChart"></canvas>
+        </div>
+        <!-- Calories consumed -->
+        <div id="expandableCard" class="max-w-sm rounded overflow-hidden shadow-lg">
+            <div class="px-6 py-4 cursor-pointer flex items-center justify-between" id="cardHeader">
+                <p class="flex items-center font-bold text-md">you have eaten 234 calories!</p>
+                <!-- MEAT ICON -->
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-meat" width="44"
+                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M13.62 8.382l1.966 -1.967a2 2 0 1 1 3.414 -1.415a2 2 0 1 1 -1.413 3.414l-1.82 1.821" />
+                        <path
+                            d="M5.904 18.596c2.733 2.734 5.9 4 7.07 2.829c1.172 -1.172 -.094 -4.338 -2.828 -7.071c-2.733 -2.734 -5.9 -4 -7.07 -2.829c-1.172 1.172 .094 4.338 2.828 7.071z" />
+                        <path d="M7.5 16l1 1" />
+                        <path
+                            d="M12.975 21.425c3.905 -3.906 4.855 -9.288 2.121 -12.021c-2.733 -2.734 -8.115 -1.784 -12.02 2.121" />
+                    </svg>
+                </div>
+                <!-- plus sign -->
+                <div id="toggleSymbol" class="text-4xl py-1">+</div>
+            </div>
+            <div class="px-3 hidden" id="calorieCardContent">
+            </div>
         </div>
     </main>
 
@@ -62,6 +84,7 @@
     <script src="scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="scripts/home_skeleton.js"></script>
     <script src="scripts/overview_exercise.js"></script>
+    <script src="scripts/expandCard.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
