--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -73,6 +73,27 @@
             <div class="px-3 hidden" id="calorieCardContent">
             </div>
         </div>
+
+        <!-- Calories burned -->
+        <div id="expandableCard" class="max-w-sm rounded overflow-hidden shadow-lg">
+            <div class="px-6 py-4 cursor-pointer flex items-center justify-between" id="cardHeader">
+                <p class="flex items-center font-bold text-lg">you have burned 234 calories!</p>
+                <!-- burn icon -->
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-flame" width="44"
+                        height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M12 12c2 -2.96 0 -7 -1 -8c0 3.038 -1.773 4.741 -3 6c-1.226 1.26 -2 3.24 -2 5a6 6 0 1 0 12 0c0 -1.532 -1.056 -3.94 -2 -5c-1.786 3 -2.791 3 -4 2z" />
+                    </svg>
+                </div>
+                <div id="toggleSymbol" class="text-4xl py-1">+</div>
+            </div>
+            <div class="px-3 hidden" id="cardContent">
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- our own footer goes here-->
