Change the name of files and fix bottom nav bar

--- a/navbars/home_nav_bottom.html
+++ b/navbars/home_nav_bottom.html
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Bottom Navigation Bar -->
-<footer id="general-bottom-nav" class="fixed bottom-0 inset-x-0 max-w-[375px] bg-[#2d58b1] text-white rounded-t-xl">
+<footer id="general-bottom-nav" class="fixed bottom-0 inset-x-0 max-w-full bg-[#2d58b1] text-white rounded-t-xl">
   <div class="flex justify-between items-center px-4 py-2">
 
     <!-- Plus Icon -->
