Fix undefined nutrition values error

--- a/addIngredient.html
+++ b/addIngredient.html
@@ -71,6 +71,7 @@
                         class="mt-1 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
                         <option value="grams">Grams</option>
                         <option value="ml">Milliliters (ml)</option>
+                        <option value="pc">Piece (pc)</option>
                     </select>
                 </div>
             </div>
