--- a/ingredients.html
+++ b/ingredients.html
@@ -86,11 +86,12 @@
                     <option value="grams">grams</option>
                 </select>
                 <!-- End of unit selection dropdown -->
-                <button id="confirmAmount" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                <button id="confirmAmount"
+                    class="bg-[#2d58b1] hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                     Confirm
                 </button>
                 <button onclick="toggleIngredientAmountModal(false)"
-                    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+                    class="bg-white hover:gray-100 text-[#2d58b1] font-bold py-2 px-4 rounded">
                     Cancel
                 </button>
             </div>
