--- a/calories.html
+++ b/calories.html
@@ -33,6 +33,8 @@
     <nav id="navbarPlaceholder"></nav>
 
     <main>
+        <!-- Add ingredients modal container -->
+        <div id="add_ingredient_modal_container"></div>
         <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-4 md:max-w-[75%]"
             id="food-card-container">
         </div>
