--- a/exercise_log.html
+++ b/exercise_log.html
@@ -31,6 +31,8 @@
 <body class="space-y-16">
   <!-- Top Navbar -->
   <nav id="navbarPlaceholder"></nav>
+  <!-- Add ingredients modal container -->
+  <div id="add_ingredient_modal_container"></div>
   <!-- Card Container -->
   <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-4 md:max-w-[75%]"
     id="exercise-card-container">
