--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -1,25 +1,11 @@
 <!-- Menu Background -->
-<div id="menuBackground" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"></div>
+<div id="quickAddMenuBackground" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-screen">
+</div>
 
 <!-- Menu -->
-<div id="menu"
+<div id="quickAddMenu"
   class="hidden fixed top-[30%] left-[10%] right-[10%] md:top-1/2 md:left-1/2 md:transform md:-translate-x-1/2 md:-translate-y-1/2  bg-white rounded shadow-lg p-4 z-50 max-w-fit">
-  <!-- Your list -->
   <ul class="menu flex flex-col bg-white max-w-fit rounded-box">
-    <!-- <li class="items-center">
-      <a>
-        <div class="inline-block">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus inline-block" width="40"
-            height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M12 5l0 14" />
-            <path d="M5 12l14 0" />
-          </svg>
-        </div>
-        <div class="inline-flex">Add New Recipe into Library</div>
-      </a>
-    </li> -->
     <li class="flex-row">
       <a href="addCalories.html">
         <div class="inline-block">
@@ -34,6 +20,12 @@
         <div class="inline-flex max-w-40">Record Your Meal</div>
       </a>
     </li>
+    <!-- Add Ingredient modal toggle -->
+    <button id="open_add_ingredient_modal"
+      class="block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+      type="button">
+      Add new ingredients to Food Library
+    </button>
     <li class="flex-row">
       <a href="add_exercise.html">
         <div class="inline-block">
@@ -50,8 +42,8 @@
     </li>
   </ul>
   <!-- Close Button -->
-  <button id="closeMenu"
-    class="mt-4 px-4 py-2 bg-[#2d58b1] text-white rounded hover:bg-blue-700 transition duration-150">Close</button>
+  <button id="closeQuickAddMenu"
+    class="mt-4 px-4 py-2 bg-[#2d58b1] text-white rounded hover:bg-[#172d58] shadow-md transition duration-150">Close</button>
 </div>
 
 <!-- Bottom Navigation Bar -->
