--- a/template.html
+++ b/template.html
@@ -48,6 +48,8 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- Add ingredients modal container -->
+    <div id="add_ingredient_modal_container"></div>
     <!-- the body of your page goes here -->
     <!-- stuff -->
 
