--- a/addCalories.html
+++ b/addCalories.html
@@ -33,41 +33,44 @@
     <nav id="navbarPlaceholder"></nav>
 
     <main class="space-y-4">
-        <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
-            <h1 class="font-semibold text-xl">Add Calories</h1>
-            <!-- Container for subcategories -->
-            <div id="subcategoriesContainer">
-                <!-- Subcategories will be dynamically added here -->
+        <main class="max-w-md mx-auto">
+            <!-- Add ingredients modal container -->
+            <div id="add_ingredient_modal_container"></div>
+            <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
+                <h1 class="font-semibold text-xl">Add Calories</h1>
+                <!-- Container for subcategories -->
+                <div id="subcategoriesContainer">
+                    <!-- Subcategories will be dynamically added here -->
+                </div>
             </div>
-        </div>
 
-        <!-- Container for recipes -->
-        <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
-            <div id="recipesContainer">
-                <!-- Recipes will be dynamically added here -->
+            <!-- Container for recipes -->
+            <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
+                <div id="recipesContainer">
+                    <!-- Recipes will be dynamically added here -->
+                </div>
             </div>
-        </div>
 
-        <!-- Optional: Form for additional input (e.g., quantity) -->
-        <div class="container flex text-xl font-semi-bold mx-auto w-[95%] md:w-[75%] p-4">
-            <form id="addCaloriesForm">
-                <label for="quantity">Quantity:</label>
-                <input class="border-2 p-2.5 border-gray-100" type="number" id="quantity" name="quantity"
-                    placeholder="g/ml (no unit needed)" required>
-                <button class="bg-[#2d58b1] text-white p-2 rounded-lg" type="submit">Add to Calories</button>
-            </form>
-        </div>
-    </main>
+            <!-- Optional: Form for additional input (e.g., quantity) -->
+            <div class="container flex text-xl font-semi-bold mx-auto w-[95%] md:w-[75%] p-4">
+                <form id="addCaloriesForm">
+                    <label for="quantity">Quantity:</label>
+                    <input class="border-2 p-2.5 border-gray-100" type="number" id="quantity" name="quantity"
+                        placeholder="g/ml (no unit needed)" required>
+                    <button class="bg-[#2d58b1] text-white p-2 rounded-lg" type="submit">Add to Calories</button>
+                </form>
+            </div>
+        </main>
 
-    <!-- Bottom Navigation Bar -->
-    <nav id="footerPlaceholder"></nav>
+        <!-- Bottom Navigation Bar -->
+        <nav id="footerPlaceholder"></nav>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="./scripts/general_skeleton.js"></script>
-    <script src="/scripts/addCalories.js"></script>
+        <!---------------------------------------------->
+        <!-- Your own JavaScript functions go here    -->
+        <!---------------------------------------------->
+        <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
+        <script src="./scripts/general_skeleton.js"></script>
+        <script src="/scripts/addCalories.js"></script>
 
 </body>
 
