--- a/each_category.html
+++ b/each_category.html
@@ -47,6 +47,9 @@
 
     <main class="flex flex-col mt-5">
 
+        <!-- Add ingredients modal container -->
+        <div id="add_ingredient_modal_container"></div>
+
         <!-- recipe name -->
         <h1 class="font-bold text-5xl m-4 mb-6"><span id="recipeCategory"></span></h1>
 
