--- a/each_recipe.html
+++ b/each_recipe.html
@@ -32,6 +32,9 @@
   <!-- Top Nav bar -->
   <nav id="navbarPlaceholder"></nav>
 
+  <!-- Add ingredients modal container -->
+  <div id="add_ingredient_modal_container"></div>
+
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
