--- a/ingredients.html
+++ b/ingredients.html
@@ -31,7 +31,10 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <main class="">
+    <main>
+
+        <!-- Add ingredients modal container -->
+        <div id="add_ingredient_modal_container"></div>
         <!-- Ingredients -->
         <h1 class="font-bold text-5xl text-center mb-6"> My Ingredients</h1>
 
