--- a/my_recipes.html
+++ b/my_recipes.html
@@ -20,7 +20,8 @@
 <body class="flex flex-col space-y-16">
     <!-- top nav bar -->
     <nav id="navbarPlaceholder"></nav>
-
+    <!-- Add ingredients modal container -->
+    <div id="add_ingredient_modal_container"></div>
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
         <!-- avatar -->
