--- a/user_info.html
+++ b/user_info.html
@@ -86,21 +86,6 @@
     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
       <p class="text-center">Welcome! <span id="name"></span></p>
       <p class="text-center">Please fill your basic info below</p>
-      <div class="my-6">
-        <label for="age" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
-        <input type="number" id="age" placeholder="age"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
-      <div class="mb-6">
-        <label for="weight" class="block mb-2 text-sm font-medium text-gray-900">weight(kg)</label>
-        <input type="number" id="weight" placeholder="weight in kg"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
-      <div class="mb-6">
-        <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
-        <input type="number" id="height" placeholder="height in cm"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
       <!-- Gender drop-down -->
       <div class="mb-6">
         <form class="max-w-sm mx-auto">
@@ -113,6 +98,41 @@
           </select>
         </form>
       </div>
+      <!-- activity level -->
+      <div class="mb-6">
+        <label for="activity-level" class="block mb-2 text-sm font-medium text-gray-900">Activity Level</label>
+        <select id="activity-level"
+          class="overflow-auto bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+          <option value="" disabled selected>Select your activity level</option>
+          <option value="1.2">Sedentary (little or no exercise, desk job)</option>
+          <option value="1.375">Lightly active (light exercise/sports 1-3 days/week)</option>
+          <option value="1.55">Moderately active (moderate exercise/sports 3-5 days/week)</option>
+          <option value="1.725">Very active (hard exercise every day, or exercising 2x/day)</option>
+          <option value="1.9">Extra active (hard exercise 2 or more times per day)</option>
+        </select>
+      </div>
+      <div class="my-6">
+        <label for="age" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
+        <input type="number" id="age" placeholder="age"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+      </div>
+      <div class="mb-6">
+        <label for="weight" class="block mb-2 text-sm font-medium text-gray-900">weight(kg)</label>
+        <input type="number" id="weight" placeholder="weight in kg"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+      </div>
+      <div class="mb-6">
+        <label for="goalWeight" class="block mb-2 text-sm font-medium text-gray-900">Goal Weight (kg)</label>
+        <input type="number" id="goalWeight" name="goalWeight" placeholder="Enter your goal weight in kg"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          required>
+      </div>
+      <div class="mb-6">
+        <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
+        <input type="number" id="height" placeholder="height in cm"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+      </div>
+
       <!-- Save and Cancel Buttons -->
       <div class="flex items-center justify-between">
         <button id="cancel" type="reset"
