Add recipe modal to bottom navbar

--- a/addIngredient.html
+++ b/addIngredient.html
@@ -31,8 +31,13 @@
 <body class="overflow-auto space-y-16">
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
+
     <!-- Add ingredients modal container -->
     <div id="add_ingredient_modal_container"></div>
+
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <!-- Ingredients form -->
     <main class="p-4">
         <h1 class="text-4xl font-bold text-center mb-6" id="ingredientName">placeholder</h1>
