--- a/each_category.html
+++ b/each_category.html
@@ -50,6 +50,9 @@
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
 
+        <!-- New Recipe Modal Container -->
+        <div id="add_new_recipe_modal_container"></div>
+
         <!-- recipe name -->
         <h1 class="font-bold text-5xl m-4 mb-6"><span id="recipeCategory"></span></h1>
 
