--- a/my_recipes.html
+++ b/my_recipes.html
@@ -22,6 +22,10 @@
     <nav id="navbarPlaceholder"></nav>
     <!-- Add ingredients modal container -->
     <div id="add_ingredient_modal_container"></div>
+
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
         <!-- avatar -->
