--- a/profile.html
+++ b/profile.html
@@ -46,6 +46,10 @@
         class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5 mb-10">
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
+
+        <!-- New Recipe Modal Container -->
+        <div id="add_new_recipe_modal_container"></div>
+
         <form id="user-profile-form">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 <p class="text-center">Welcome! <span id="name"></span></p>
