--- a/addCalories.html
+++ b/addCalories.html
@@ -32,6 +32,9 @@
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <main class="space-y-4">
         <main class="max-w-md mx-auto">
             <!-- Add ingredients modal container -->
