--- a/add_exercise.html
+++ b/add_exercise.html
@@ -31,7 +31,8 @@
 <body class="max-w-screen space-y-16">
   <!-- Top Navbar -->
   <nav id="navbarPlaceholder"></nav>
-
+  <!-- New Recipe Modal Container -->
+  <div id="add_new_recipe_modal_container"></div>
   <!-- Main Session -->
   <main class="bg-white shadow-2xl mx-auto max-w-full md:max-w-[75%] my-10 rounded-2xl">
     <main class="max-w-md mx-auto">
