--- a/calories.html
+++ b/calories.html
@@ -32,6 +32,9 @@
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <main>
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
