--- a/each_recipe.html
+++ b/each_recipe.html
@@ -35,6 +35,9 @@
   <!-- Add ingredients modal container -->
   <div id="add_ingredient_modal_container"></div>
 
+  <!-- New Recipe Modal Container -->
+  <div id="add_new_recipe_modal_container"></div>
+
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
