--- a/ingredients.html
+++ b/ingredients.html
@@ -31,6 +31,9 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <main>
 
         <!-- Add ingredients modal container -->
