--- a/overview.html
+++ b/overview.html
@@ -47,7 +47,10 @@
 
     <main class="max-w-md mx-auto">
         <div id="add_ingredient_modal_container"></div>
+        <!-- New Recipe Modal Container -->
+        <div id="add_new_recipe_modal_container"></div>
         <div class="chart-container">
+            <!-- line graph placeholder -->
             <canvas id="dailyCalorieBurntChart"></canvas>
         </div>
 
