--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -22,12 +22,13 @@
     </li>
     <!-- Add Ingredient modal toggle -->
     <button id="open_add_ingredient_modal"
-      class="block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+      class="mb-6 block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
       type="button">
       Add new ingredient to Food Library
     </button>
+    <!-- Add Recipe modal toggle -->
     <button id="open_add_recipe_modal"
-      class="block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+      class="mb-6 block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
       type="button">
       Add new recipe to Food Library
     </button>
