add modal to profile page

--- a/profile.html
+++ b/profile.html
@@ -41,6 +41,9 @@
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
     <!-- user info form -->
     <main
         class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5 mb-10">
